--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Home</title>
-</head>
-<body>
-    <form action = "" method = "post">
-        <p>Enter Number</p>
-        <p><input type = "text" name = "numin" /></p>
-        <p><input type = "submit" value = "submit" /></p>
-    </form>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+
+        <form class="mx-auto card p-5 mt-5" action="" method = "post" style="width: 500px;">
+            <div class="form-group">
+                <label for="InputNumber1">Enter a Number</label>
+                <input class="form-control form-control-lg" type="number" min="0" step="1" required name = "numin" placeholder="Enter Number">
+            </div>
+            <button type="submit" class="btn btn-info">Submit</button>
+        </form>
+{% endblock content %}
